# EnginBERT

./: .gitignore  README.md  main.py  pyproject.toml  test.py
.scripts/evaluation_metrics/: category_clusterin.py  citation_evaluation.py  information_retrieval.py
data/: cleaned_processed_papers.csv  processed_papers.csv
scripts/: __init__.py  cli.py  data_arxiv.py  evaluate_model.py  model_and_tokenizer.py  preprocess_data.py  test_tokenizer.py  train_bert.py
scripts/data_processing/: __init__.py  data_arxiv.py  preprocess_data.py
scripts/data_processing/equations/: categories.py  category_crawler.py  cleanup_data.py  download_latex.py  extract_equations.py  extract_latex.py  main.py  save_extracted_data.py
scripts/data_processing/knowledge_graph/: graph_builder.py  visualize.py
scripts/evaluation_metrics/: __init__.py  category_clustering.py  citation_evaluation.py  information_retrieval.py  populate_citations.py
scripts/helpers/: __init__.py  data_loading.py  embedding_extraction.py  model_and_tokenizer.py
scripts/tokenizer/: __init__.py  tokenizer_config.json
scripts/train/: __init__.py  component_relation.py  embedding_extraction.py  equation_understanding.py  hierachial_integration.py  mlm_training.py  technical_term_training.py  train_bert_sequence_classification.py
scripts/train/models/: __init__.py  architectures.py
